iter_language/tests/corpus/invalid/clone-bad-apply-back.iter
workspace clone {
  base = "."
  excludes = []
  preserve_mtime = true
  apply_back {
    mode = teleport
  }
}
